--- a/my-app/0-deployment.yaml
+++ b/my-app/0-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: app/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
@@ -20,3 +20,5 @@ spec:
         image: sivakumarvemana/nginx:v0.1.0
         ports:
           -containerPort: 80
+
+#this is for deployment
